teacher pass word change
