# swagger-output.json
@@ -1313,6 +1313,56 @@
         }
       }
     },
+    "/teacher/changeTeacherPassword": {
+      "post": {
+        "tags": [
+          "Meeting"
+        ],
+        "summary": "Set meeting time (teacher only)",
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "Bearer access token",
+            "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6..."
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "currentPassword": {
+                  "type": "string",
+                  "example": " "
+                },
+                "newPassword": {
+                  "type": "string",
+                  "example": " "
+                }
+              }
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "503": {
+            "description": "Service Unavailable"
+          }
+        }
+      }
+    },
     "/store/createProduct": {
       "post": {
         "tags": [
